--- a/index.html
+++ b/index.html
@@ -11,7 +11,9 @@
     <link rel="stylesheet" href="dist/styles.css" />
   </head>
   <body>
-    <img src="/images/top-area-fon.png" alt="" class="top-area-bg" />
+    <div class="bg-wrap">
+      <div class="top-area-bg"></div>
+    </div>
 
     <header class="container">
       <div class="head-wrap">
@@ -32,13 +34,352 @@
       </div>
     </header>
     <main>
-      <section class="container top-area">
-        <h1>Allt på ett enda ställe.</h1>
-        <p>
-          Tänk nytt och samla alla dina digitala kanaler på ett enda ställe. Din
-          kommunikation med kunder och medarbetare blir enkel, kostnadseffektiv
-          och flexibel. En enda plattform - med hundratals användningsområden
-        </p>
+      <section class="container">
+        <div class="top-area">
+          <div class="top-area__wrapper">
+            <h1>Allt på ett enda ställe.</h1>
+            <p>
+              Tänk nytt och samla alla dina digitala kanaler på ett enda ställe.
+              Din kommunikation med kunder och medarbetare blir enkel,
+              kostnadseffektiv och flexibel. En enda plattform - med hundratals
+              användningsområden
+            </p>
+            <a href="#" class="button" style="margin-right: 20px">BUTTON</a>
+            <a href="#" class="button">BUTTON</a>
+          </div>
+          <a href="" class="button button-phone">
+            <img src="/images/icons/phone.png" alt="" />
+          </a>
+        </div>
+      </section>
+
+      <section class="container flex-wrap">
+        <div class="wrap__image">
+          <img src="/images/picture.png" alt="" />
+        </div>
+        <div class="wrap__text">
+          <h2>About our company</h2>
+          <p>
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+            eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim
+            ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
+            aliquip ex ea commodo consequat.
+          </p>
+          <a href="#" class="link-more">Learn more></a>
+        </div>
+      </section>
+      <section class="container benefits">
+        <h2>Our Benefits</h2>
+        <div class="benefits-wrap">
+          <div class="flex-column flex-column-left">
+            <img src="/images/icons/headphone-2.png" alt="" />
+            <h5>Lorem ipsum</h5>
+            <p>
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+              eiusmod tempor
+            </p>
+            <img src="/images/icons/gradient.png" alt="" />
+            <h5>Lorem ipsum</h5>
+            <p>
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+              eiusmod tempor
+            </p>
+            <img src="/images/icons/online-learning-1.png" alt="" />
+            <h5>Lorem ipsum</h5>
+            <p>
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+              eiusmod tempor
+            </p>
+          </div>
+          <div class="flex-column flex-column-center">
+            <img src="/images/cell-phone.png" alt="" />
+          </div>
+          <div class="flex-column flex-column-right">
+            <img src="/images/icons/notebook.png" alt="" />
+            <h5>Lorem ipsum</h5>
+            <p>
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+              eiusmod tempor
+            </p>
+            <img src="/images/icons/searching.png" alt="" />
+            <h5>Lorem ipsum</h5>
+            <p>
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+              eiusmod tempor
+            </p>
+            <img src="/images/icons/learning-1.png" alt="" />
+            <h5>Lorem ipsum</h5>
+            <p>
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+              eiusmod tempor
+            </p>
+          </div>
+        </div>
+      </section>
+      <section class="container flex-wrap">
+        <div class="wrap__text">
+          <h2>Who we are</h2>
+          <p>
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+            eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim
+            ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
+            aliquip ex ea commodo consequat.
+          </p>
+          <a href="#" class="link-more">Learn more></a>
+        </div>
+        <div class="wrap__image">
+          <img src="/images/picture-1.png" alt="" />
+        </div>
+      </section>
+      <section class="container--area flex-wrap">
+        <div class="blue-field">
+          <div class="flex-wrap">
+            <div class="wrap__image">
+              <img src="/images/icons/headphone-2.png" alt="" />
+            </div>
+            <div class="wrap__text">
+              <h5><span>100</span> Happy clients</h5>
+              <p>
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+                eiusmod tempor incididunt ut labore et dolore magna aliqua.
+              </p>
+            </div>
+          </div>
+          <div class="flex-wrap">
+            <div class="wrap__image">
+              <img src="/images/icons/gradient.png" alt="" />
+            </div>
+            <div class="wrap__text">
+              <h5><span>10</span> Business Parners</h5>
+              <p>
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+                eiusmod tempor incididunt ut labore et dolore magna aliqua.
+              </p>
+            </div>
+          </div>
+          <div class="flex-wrap">
+            <div class="wrap__image">
+              <img src="/images/icons/online-learning-1.png" alt="" />
+            </div>
+            <div class="wrap__text">
+              <h5><span>100</span> Projects Complited</h5>
+              <p>
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+                eiusmod tempor incididunt ut labore et dolore magna aliqua.
+              </p>
+            </div>
+          </div>
+        </div>
+
+        <div class="wrap__text">
+          <h2>Why Evado</h2>
+          <p>
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+            eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim
+            ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
+            aliquip ex ea commodo consequat.
+          </p>
+          <a href="#" class="link-more">Learn more></a>
+        </div>
+      </section>
+
+      <section class="container">
+        <h2>How it works</h2>
+        <div class="working-steps">
+          <!-- <div class="working-steps__circules-flex"></div> -->
+          <div class="working-steps__line">
+            <div class="dot dot-1"></div>
+            <div class="dot dot-2"></div>
+            <div class="dot dot-3"></div>
+          </div>
+        </div>
+
+        <div class="flex-wrap">
+          <div class="step step-1">
+            <div class="circule circule-1">1</div>
+            <h4>Step 1</h4>
+            <p>
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+              eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut
+              enim ad minim veniam, quis .
+            </p>
+          </div>
+          <div class="step step-2">
+            <div class="circule circule-2">2</div>
+            <h4>Step 2</h4>
+            <p>
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+              eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut
+              enim ad minim veniam, quis .
+            </p>
+          </div>
+          <div class="step step-3">
+            <div class="circule circule-3">3</div>
+            <h4>Step 3</h4>
+            <p>
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+              eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut
+              enim ad minim veniam, quis .
+            </p>
+          </div>
+        </div>
+        <div class="step step-button">
+          <a href="#" class="button button-step">BUTTON</a>
+        </div>
+      </section>
+      <section class="action action-height">
+        <div class="container">
+          <div class="flex-wrap">
+            <div class="cell-phone">
+              <img src="/images/cell-phone.png" alt="" />
+            </div>
+            <div class="wrap__text wrap__text-action">
+              <h3>Call to action frace</h3>
+              <p>Lorem ipsum dolor sit amet, consectetur adipiscing</p>
+              <a href="#" class="button button-step">BUTTON</a>
+            </div>
+          </div>
+        </div>
+      </section>
+      <section class="container">
+        <h2 class="align-right">Meet Our Team</h2>
+        <div class="flex-wrap flex-wrap-team">
+          <div class="team">
+            <div class="team__blue-field team__blue-field-1">
+              <img src="/images/jonas.png" alt="" />
+              <div class="team__icon">
+                <img src="/images/icons/group-100.png" alt="" />
+              </div>
+            </div>
+            <div class="team__text-field">
+              <h6>Lorem Ipsum</h6>
+              <h5>Lorem Ipsum</h5>
+              <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Facilis
+                esse molestias sed voluptate nihil, quia dolorem atque quasi
+                ipsum, vel quae voluptas commodi harum fugit illo modi
+                molestiae? Eligendi, quo!
+              </p>
+              <a href="#" class="link-more">Learn more></a>
+            </div>
+          </div>
+          <div class="team">
+            <div class="team__blue-field team__blue-field-2">
+              <img src="/images/oz-seyrek.png" alt="" />
+              <div class="team__icon">
+                <img src="/images/icons/group-101.png" alt="" />
+              </div>
+            </div>
+            <div class="team__text-field">
+              <h6>Lorem Ipsum</h6>
+              <h5>Lorem Ipsum</h5>
+              <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Facilis
+                esse molestias sed voluptate nihil, quia dolorem atque quasi
+                ipsum, vel quae voluptas commodi harum fugit illo modi
+                molestiae? Eligendi, quo!
+              </p>
+              <a href="#" class="link-more">Learn more></a>
+            </div>
+          </div>
+          <div class="team">
+            <div class="team__blue-field team__blue-field-3">
+              <img src="/images/foto-sushi.png" alt="" />
+              <div class="team__icon">
+                <img src="/images/icons/group-102.png" alt="" />
+              </div>
+            </div>
+            <div class="team__text-field">
+              <h6>Lorem Ipsum</h6>
+              <h5>Lorem Ipsum</h5>
+              <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Facilis
+                esse molestias sed voluptate nihil, quia dolorem atque quasi
+                ipsum, vel quae voluptas commodi harum fugit illo modi
+                molestiae? Eligendi, quo!
+              </p>
+              <a href="#" class="link-more">Learn more></a>
+            </div>
+          </div>
+        </div>
+      </section>
+      <section class="action">
+        <div class="container container-indent">
+          <p class="quotes">“</p>
+          <p class="center">
+            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Hic
+            reiciendis amet cupiditate expedita repellat, iusto blanditiis
+            itaque quas perferendis nesciunt odio a ducimus suscipit aliquid
+            perspiciatis ipsum quod fuga ea?
+          </p>
+          <h6 class="center">Lorem ipsum</h6>
+          <p class="center">Dolor sit amet</p>
+          <div class="img-absolute">
+            <img src="/images/rectangle-83.png" alt="" />
+          </div>
+        </div>
+      </section>
+      <section class="lights">
+        <div class="container">
+          <h2>Our Clients</h2>
+          <div class="flex-wrap">
+            <div class="logo">
+              <img src="/images/kraftringen.png" alt="" />
+            </div>
+            <div class="logo">
+              <img src="/images/luleaenergi.png" alt="" />
+            </div>
+            <div class="logo">
+              <img src="/images/lulebo_logo.png" alt="" />
+            </div>
+            <div class="logo">
+              <img src="/images/logo_pb.png" alt="" />
+            </div>
+          </div>
+        </div>
+      </section>
+      <section class="container">
+        <h2>Our Services</h2>
+        <div class="flex-wrap">
+          <div class="images-cell">
+            <div class="images-cell_1">
+              <img src="/images/cell1.png" alt="" />
+            </div>
+            <div class="images-cell_2">
+              <img src="/images/cell1.png" alt="" />
+            </div>
+          </div>
+          <div class="wrap__text">
+            <h5>Lorem ipsum</h5>
+            <p style="width: 100%">
+              Consectetuer adipiscing elit, sed diam nonummy nibh euismod
+              tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi
+              enim ad minim veniam, quis nostrud
+            </p>
+            <a href="#" class="link-more">Learn more></a>
+            <h5>Lorem ipsum</h5>
+            <p style="width: 100%">
+              Consectetuer adipiscing elit, sed diam nonummy nibh euismod
+              tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi
+              enim ad minim veniam, quis nostrud
+            </p>
+            <a href="#" class="link-more">Learn more></a>
+            <h5>Lorem ipsum</h5>
+            <p style="width: 100%">
+              Consectetuer adipiscing elit, sed diam nonummy nibh euismod
+              tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi
+              enim ad minim veniam, quis nostrud
+            </p>
+            <a href="#" class="link-more">Learn more></a>
+            <h5>Lorem ipsum</h5>
+            <p style="width: 100%">
+              Consectetuer adipiscing elit, sed diam nonummy nibh euismod
+              tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi
+              enim ad minim veniam, quis nostrud
+            </p>
+            <a href="#" class="link-more">Learn more></a>
+          </div>
+        </div>
       </section>
     </main>
     <script src="dist/script.js"></script>
