--- a/index.html
+++ b/index.html
@@ -14,7 +14,9 @@
     <div class="bg-wrap">
       <div class="top-area-bg"></div>
     </div>
-
+    <!-- <div class="bg-wrap-foot">
+      <div class="foot-bg"></div>
+    </div> -->
     <header class="container">
       <div class="head-wrap">
         <div class="head-logo">
@@ -53,7 +55,7 @@
         </div>
       </section>
 
-      <section class="container flex-wrap">
+      <!-- <section class="container flex-wrap">
         <div class="wrap__image">
           <img src="/images/picture.png" alt="" />
         </div>
@@ -67,8 +69,8 @@
           </p>
           <a href="#" class="link-more">Learn more></a>
         </div>
-      </section>
-      <section class="container benefits">
+      </section> -->
+      <!-- <section class="container benefits">
         <h2>Our Benefits</h2>
         <div class="benefits-wrap">
           <div class="flex-column flex-column-left">
@@ -115,8 +117,8 @@
             </p>
           </div>
         </div>
-      </section>
-      <section class="container flex-wrap">
+      </section> -->
+      <!-- <section class="container flex-wrap">
         <div class="wrap__text">
           <h2>Who we are</h2>
           <p>
@@ -130,8 +132,8 @@
         <div class="wrap__image">
           <img src="/images/picture-1.png" alt="" />
         </div>
-      </section>
-      <section class="container--area flex-wrap">
+      </section> -->
+      <!-- <section class="container--area flex-wrap">
         <div class="blue-field">
           <div class="flex-wrap">
             <div class="wrap__image">
@@ -181,12 +183,11 @@
           </p>
           <a href="#" class="link-more">Learn more></a>
         </div>
-      </section>
+      </section> -->
 
-      <section class="container">
+      <!-- <section class="container">
         <h2>How it works</h2>
         <div class="working-steps">
-          <!-- <div class="working-steps__circules-flex"></div> -->
           <div class="working-steps__line">
             <div class="dot dot-1"></div>
             <div class="dot dot-2"></div>
@@ -226,8 +227,8 @@
         <div class="step step-button">
           <a href="#" class="button button-step">BUTTON</a>
         </div>
-      </section>
-      <section class="action action-height">
+      </section> -->
+      <!-- <section class="action action-height">
         <div class="container">
           <div class="flex-wrap">
             <div class="cell-phone">
@@ -240,8 +241,8 @@
             </div>
           </div>
         </div>
-      </section>
-      <section class="container">
+      </section> -->
+      <!-- <section class="container">
         <h2 class="align-right">Meet Our Team</h2>
         <div class="flex-wrap flex-wrap-team">
           <div class="team">
@@ -302,8 +303,8 @@
             </div>
           </div>
         </div>
-      </section>
-      <section class="action">
+      </section> -->
+      <!-- <section class="action">
         <div class="container container-indent">
           <p class="quotes">“</p>
           <p class="center">
@@ -318,8 +319,8 @@
             <img src="/images/rectangle-83.png" alt="" />
           </div>
         </div>
-      </section>
-      <section class="lights">
+      </section> -->
+      <!-- <section class="lights">
         <div class="container">
           <h2>Our Clients</h2>
           <div class="flex-wrap">
@@ -337,8 +338,8 @@
             </div>
           </div>
         </div>
-      </section>
-      <section class="container">
+      </section> -->
+      <!-- <section class="container">
         <h2>Our Services</h2>
         <div class="flex-wrap">
           <div class="images-cell">
@@ -380,8 +381,219 @@
             <a href="#" class="link-more">Learn more></a>
           </div>
         </div>
-      </section>
+      </section> -->
+      <!-- <section class="container">
+        <h2>Choose your plan</h2>
+        <div class="flex-wrap">
+          <div class="card">
+            <div class="blue-cube">
+              <div class="blue-cube blue-cube__inkline"></div>
+              <p>Light</p>
+            </div>
+            <p>
+              Lorem ipsum dolor sit, amet consectetur adipisicing elit. Tempore
+              laborum in optio quia quasi incidunt perspiciatis voluptatem harum
+              esse.
+            </p>
+            <div class="green-arrow">
+              <div class="green-arrow__line"></div>
+              <div class="green-arrow__arrow">
+                <div class="arrow-part arrow-part-1"></div>
+                <div class="arrow-part arrow-part-2"></div>
+              </div>
+            </div>
+          </div>
+          <div class="card">
+            <div class="blue-cube">
+              <div class="blue-cube blue-cube__inkline"></div>
+              <p>Premium</p>
+            </div>
+            <p>
+              Lorem ipsum dolor sit, amet consectetur adipisicing elit. Tempore
+              laborum in optio quia quasi incidunt perspiciatis voluptatem harum
+              esse.
+            </p>
+            <div class="green-arrow">
+              <div class="green-arrow__line"></div>
+              <div class="green-arrow__arrow">
+                <div class="arrow-part arrow-part-1"></div>
+                <div class="arrow-part arrow-part-2"></div>
+              </div>
+            </div>
+          </div>
+          <div class="card">
+            <div class="blue-cube">
+              <div class="blue-cube blue-cube__inkline"></div>
+              <p>Standart</p>
+            </div>
+            <p>
+              Lorem ipsum dolor sit, amet consectetur adipisicing elit. Tempore
+              laborum in optio quia quasi incidunt perspiciatis voluptatem harum
+              esse.
+            </p>
+            <div class="green-arrow">
+              <div class="green-arrow__line"></div>
+              <div class="green-arrow__arrow">
+                <div class="arrow-part arrow-part-1"></div>
+                <div class="arrow-part arrow-part-2"></div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section> -->
+      <!-- <section class="container">
+        <div class="action-frase">
+          <p class="title">Call to action frase</p>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Deserunt,
+            voluptates quibusdam. Nam, fugiat?
+          </p>
+          <a href="#" class="button">BUTTON</a>
+          <img src="/images/picture-phone.png" alt="" />
+        </div>
+      </section> -->
+      <!-- <section class="container">
+        <h2>Read News</h2>
+        <div class="flex-wrap">
+          <div class="image-card">
+            <img src="/images/01.png" alt="" />
+            <div class="image-card__text">
+              <p>Lorem ipsum dolor sit amet</p>
+            </div>
+            <div class="image-card__arrow">
+              <div class="circle-arrow">
+                <div class="arrow-part arrow-part-1"></div>
+                <div class="arrow-part arrow-part-2"></div>
+              </div>
+            </div>
+          </div>
+          <div class="image-card">
+            <img src="/images/02.png" alt="" />
+            <div class="image-card__text">
+              <p>Lorem ipsum dolor sit amet</p>
+            </div>
+            <div class="image-card__arrow">
+              <div class="circle-arrow">
+                <div class="arrow-part arrow-part-1"></div>
+                <div class="arrow-part arrow-part-2"></div>
+              </div>
+            </div>
+          </div>
+          <div class="image-card">
+            <img src="/images/01.png" alt="" />
+            <div class="image-card__text">
+              <p>Lorem ipsum dolor sit amet</p>
+            </div>
+            <div class="image-card__arrow">
+              <div class="circle-arrow">
+                <div class="arrow-part arrow-part-1"></div>
+                <div class="arrow-part arrow-part-2"></div>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="flex-wrap">
+          <div class="image-card">
+            <img src="/images/02.png" alt="" />
+            <div class="image-card__text">
+              <p>Lorem ipsum dolor sit amet</p>
+            </div>
+            <div class="image-card__arrow">
+              <div class="circle-arrow">
+                <div class="arrow-part arrow-part-1"></div>
+                <div class="arrow-part arrow-part-2"></div>
+              </div>
+            </div>
+          </div>
+          <div class="image-card">
+            <img src="/images/01.png" alt="" />
+            <div class="image-card__text">
+              <p>Lorem ipsum dolor sit amet</p>
+            </div>
+            <div class="image-card__arrow">
+              <div class="circle-arrow">
+                <div class="arrow-part arrow-part-1"></div>
+                <div class="arrow-part arrow-part-2"></div>
+              </div>
+            </div>
+          </div>
+          <div class="image-card">
+            <img src="/images/02.png" alt="" />
+            <div class="image-card__text">
+              <p>Lorem ipsum dolor sit amet</p>
+            </div>
+            <div class="image-card__arrow">
+              <div class="circle-arrow">
+                <div class="arrow-part arrow-part-1"></div>
+                <div class="arrow-part arrow-part-2"></div>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="action-frase">
+          <a href="#" class="button">BUTTON</a>
+        </div>
+      </section> -->
+      <!-- <section class="container">
+        <h2>Contact Us</h2>
+        <div class="form-wrap">
+          <form
+            action="#"
+            enctype="text/plain"
+            name="registration-form"
+            autocomplete="off"
+            id="registration-form"
+          >
+            <label for="name"
+              >Consectetuer adipiscing elit, sed diam nonummy nibh euismod
+              tincidunt ut laoreet dolore magna aliquam erat volutpat.</label
+            >
+            <div class="input-field">
+              <input
+                type="text"
+                id="name"
+                requered
+                required
+                placeholder="Your Name"
+              />
+            </div>
+            <div class="input-field">
+              <input type="email" id="email" placeholder="Your Email" />
+            </div>
+          </form>
+        </div>
+        <a href="#" class="button">Submit</a>
+      </section> -->
     </main>
+
+    <!-- <footer class="footer-container">
+      <div class="container">
+        <div class="flex-wrap-foot">
+          <div class="navigate">
+            <img src="/images/logo.png" alt="" />
+          </div>
+          <div class="navigate">
+            <a href="#">Home</a>
+            <a href="#">Services</a>
+            <a href="#">How it works</a>
+            <a href="#">Contact</a>
+          </div>
+          <div class="navigate">
+            <a href="#">About</a>
+            <a href="#">News</a>
+            <a href="#">Team</a>
+            <a href="#">FAQ</a>
+          </div>
+          <div class="navigate">
+            <div class="flex-wrap">
+              <img src="/images/icons/facebook.png" alt="" />
+              <img src="/images/icons/instagram.png" alt="" />
+              <img src="/images//icons/linkedin.png" alt="" />
+            </div>
+          </div>
+        </div>
+      </div>
+    </footer> -->
     <script src="dist/script.js"></script>
   </body>
 </html>
