--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
     <div class="bg-wrap">
       <div class="top-area-bg"></div>
     </div>
-    <!-- <div class="bg-wrap-foot">
+    <div class="bg-wrap-foot">
       <div class="foot-bg"></div>
-    </div> -->
+    </div>
     <header class="container">
       <div class="head-wrap">
         <div class="head-logo">
@@ -55,7 +55,7 @@
         </div>
       </section>
 
-      <!-- <section class="container flex-wrap">
+      <section class="container flex-wrap">
         <div class="wrap__image">
           <img src="/images/picture.png" alt="" />
         </div>
@@ -69,8 +69,8 @@
           </p>
           <a href="#" class="link-more">Learn more></a>
         </div>
-      </section> -->
-      <!-- <section class="container benefits">
+      </section>
+      <section class="container benefits">
         <h2>Our Benefits</h2>
         <div class="benefits-wrap">
           <div class="flex-column flex-column-left">
@@ -117,8 +117,8 @@
             </p>
           </div>
         </div>
-      </section> -->
-      <!-- <section class="container flex-wrap">
+      </section>
+      <section class="container flex-wrap">
         <div class="wrap__text">
           <h2>Who we are</h2>
           <p>
@@ -132,8 +132,8 @@
         <div class="wrap__image">
           <img src="/images/picture-1.png" alt="" />
         </div>
-      </section> -->
-      <!-- <section class="container--area flex-wrap">
+      </section>
+      <section class="container--area flex-wrap">
         <div class="blue-field">
           <div class="flex-wrap">
             <div class="wrap__image">
@@ -183,9 +183,9 @@
           </p>
           <a href="#" class="link-more">Learn more></a>
         </div>
-      </section> -->
+      </section>
 
-      <!-- <section class="container">
+      <section class="container">
         <h2>How it works</h2>
         <div class="working-steps">
           <div class="working-steps__line">
@@ -227,8 +227,8 @@
         <div class="step step-button">
           <a href="#" class="button button-step">BUTTON</a>
         </div>
-      </section> -->
-      <!-- <section class="action action-height">
+      </section>
+      <section class="action action-height">
         <div class="container">
           <div class="flex-wrap">
             <div class="cell-phone">
@@ -241,8 +241,8 @@
             </div>
           </div>
         </div>
-      </section> -->
-      <!-- <section class="container">
+      </section>
+      <section class="container">
         <h2 class="align-right">Meet Our Team</h2>
         <div class="flex-wrap flex-wrap-team">
           <div class="team">
@@ -303,8 +303,8 @@
             </div>
           </div>
         </div>
-      </section> -->
-      <!-- <section class="action">
+      </section>
+      <section class="action">
         <div class="container container-indent">
           <p class="quotes">“</p>
           <p class="center">
@@ -319,8 +319,8 @@
             <img src="/images/rectangle-83.png" alt="" />
           </div>
         </div>
-      </section> -->
-      <!-- <section class="lights">
+      </section>
+      <section class="lights">
         <div class="container">
           <h2>Our Clients</h2>
           <div class="flex-wrap">
@@ -338,8 +338,8 @@
             </div>
           </div>
         </div>
-      </section> -->
-      <!-- <section class="container">
+      </section>
+      <section class="container">
         <h2>Our Services</h2>
         <div class="flex-wrap">
           <div class="images-cell">
@@ -381,8 +381,8 @@
             <a href="#" class="link-more">Learn more></a>
           </div>
         </div>
-      </section> -->
-      <!-- <section class="container">
+      </section>
+      <section class="container">
         <h2>Choose your plan</h2>
         <div class="flex-wrap">
           <div class="card">
@@ -440,8 +440,8 @@
             </div>
           </div>
         </div>
-      </section> -->
-      <!-- <section class="container">
+      </section>
+      <section class="container">
         <div class="action-frase">
           <p class="title">Call to action frase</p>
           <p>
@@ -451,8 +451,8 @@
           <a href="#" class="button">BUTTON</a>
           <img src="/images/picture-phone.png" alt="" />
         </div>
-      </section> -->
-      <!-- <section class="container">
+      </section>
+      <section class="container">
         <h2>Read News</h2>
         <div class="flex-wrap">
           <div class="image-card">
@@ -533,8 +533,8 @@
         <div class="action-frase">
           <a href="#" class="button">BUTTON</a>
         </div>
-      </section> -->
-      <!-- <section class="container">
+      </section>
+      <section class="container">
         <h2>Contact Us</h2>
         <div class="form-wrap">
           <form
@@ -563,10 +563,10 @@
           </form>
         </div>
         <a href="#" class="button">Submit</a>
-      </section> -->
+      </section>
     </main>
 
-    <!-- <footer class="footer-container">
+    <footer class="footer-container">
       <div class="container">
         <div class="flex-wrap-foot">
           <div class="navigate">
@@ -593,7 +593,7 @@
           </div>
         </div>
       </div>
-    </footer> -->
+    </footer>
     <script src="dist/script.js"></script>
   </body>
 </html>
