--- a/index.html
+++ b/index.html
@@ -23,14 +23,20 @@
           <img src="/images/logo.png" alt="" />
         </div>
         <nav class="head-nav">
-          <ul>
-            <li><a href="#">Home</a></li>
-            <li><a href="#">Products</a></li>
-            <li><a href="#">Services</a></li>
-            <li><a href="#">News</a></li>
-            <li><a href="#">Contact</a></li>
-            <li><a href="#">Job</a></li>
-            <li><a href="#">In English</a></li>
+          <div class="burger-menu">
+            <label class="menu__btn" for="menu__toggle">
+              <span></span>
+            </label>
+          </div>
+
+          <ul class="menu__box" id="menu">
+            <li><a class="menu__item" href="#">Home</a></li>
+            <li><a class="menu__item" href="#">Products</a></li>
+            <li><a class="menu__item" href="#">Services</a></li>
+            <li><a class="menu__item" href="#">News</a></li>
+            <li><a class="menu__item" href="#">Contact</a></li>
+            <li><a class="menu__item" href="#">Job</a></li>
+            <li><a class="menu__item" href="#">In English</a></li>
           </ul>
         </nav>
       </div>
