--- a/index.html
+++ b/index.html
@@ -14,9 +14,11 @@
     <div class="bg-wrap">
       <div class="top-area-bg"></div>
     </div>
+
     <div class="bg-wrap-foot">
       <div class="foot-bg"></div>
     </div>
+
     <header class="container">
       <div class="head-wrap">
         <div class="head-logo">
@@ -42,7 +44,7 @@
       </div>
     </header>
     <main>
-      <section class="container">
+      <section class="container top-area">
         <div class="top-area">
           <div class="top-area__wrapper">
             <h1>Allt på ett enda ställe.</h1>
@@ -62,10 +64,10 @@
       </section>
 
       <section class="container flex-wrap">
-        <div class="wrap__image">
+        <div class="wrap wrap__image">
           <img src="/images/picture.png" alt="" />
         </div>
-        <div class="wrap__text">
+        <div class="wrap wrap__text">
           <h2>About our company</h2>
           <p>
             Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
@@ -76,6 +78,7 @@
           <a href="#" class="link-more">Learn more></a>
         </div>
       </section>
+
       <section class="container benefits">
         <h2>Our Benefits</h2>
         <div class="benefits-wrap">
