--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       <div class="foot-bg"></div>
     </div>
 
-    <header class="container">
+    <header class="">
       <div class="head-wrap">
         <div class="head-logo">
           <img src="/images/logo.png" alt="" />
