--- a/index.html
+++ b/index.html
@@ -32,13 +32,13 @@
           </div>
 
           <ul class="menu__box" id="menu">
-            <li><a class="menu__item" href="#">Home</a></li>
-            <li><a class="menu__item" href="#">Products</a></li>
-            <li><a class="menu__item" href="#">Services</a></li>
-            <li><a class="menu__item" href="#">News</a></li>
-            <li><a class="menu__item" href="#">Contact</a></li>
-            <li><a class="menu__item" href="#">Job</a></li>
-            <li><a class="menu__item" href="#">In English</a></li>
+            <li><a class="menu__item text-white" href="#">Home</a></li>
+            <li><a class="menu__item text-white" href="#">Products</a></li>
+            <li><a class="menu__item text-white" href="#">Services</a></li>
+            <li><a class="menu__item text-white" href="#">News</a></li>
+            <li><a class="menu__item text-white" href="#">Contact</a></li>
+            <li><a class="menu__item text-white" href="#">Job</a></li>
+            <li><a class="menu__item text-white" href="#">In English</a></li>
           </ul>
         </nav>
       </div>
@@ -47,8 +47,8 @@
       <section class="container top-area">
         <div class="top-area">
           <div class="top-area__wrapper">
-            <h1>Allt på ett enda ställe.</h1>
-            <p>
+            <h1 class="text-gray">Allt på ett enda ställe.</h1>
+            <p class="text-gray">
               Tänk nytt och samla alla dina digitala kanaler på ett enda ställe.
               Din kommunikation med kunder och medarbetare blir enkel,
               kostnadseffektiv och flexibel. En enda plattform - med hundratals
@@ -69,20 +69,20 @@
             <img src="/images/picture.png" alt="" />
           </div>
           <div class="wrap wrap__text">
-            <h2>About our company</h2>
+            <h2 class="text-gray">About our company</h2>
             <p>
               Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
               eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim
               ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
               aliquip ex ea commodo consequat.
             </p>
-            <a href="#" class="link-more">Learn more></a>
+            <a href="#" class="link-more text-blue">Learn more></a>
           </div>
         </div>
       </section>
 
       <section class="container benefits">
-        <h2>Our Benefits</h2>
+        <h2 class="text-gray">Our Benefits</h2>
         <div class="flex-wrap">
           <div class="flex-column flex-column-left">
             <img src="/images/cell-phone.png" alt="" />
@@ -171,14 +171,14 @@
       <section class="container">
         <div class="flex-wrap">
           <div class="wrap__text">
-            <h2>Who we are</h2>
+            <h2 class="text-gray">Who we are</h2>
             <p>
               Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
               eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim
               ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
               aliquip ex ea commodo consequat.
             </p>
-            <a href="#" class="link-more">Learn more></a>
+            <a href="#" class="link-more text-blue">Learn more></a>
           </div>
           <div class="wrap__image">
             <img src="/images/picture-1.png" alt="" />
@@ -189,31 +189,35 @@
       <section class="container">
         <h2>Why Evado</h2>
 
-            <div class="blue-card">
-              <div class="">
-                <h5>100</h5>
-                <p>Happy clients</p>
-              </div>
+        <div class="flex-wrap">
+          <div class="blue-card">
+            <div class="text-wrap">
+              <h5 class="text-white">100</h5>
+              <p class="text-white">Happy clients</p>
             </div>
+          </div>
 
-            <div class="blue-card">
-              <div class="">
-                <h5>10</h5>
-                <p>Business Parners</p>
-              </div>
+          <div class="blue-card">
+            <div class="text-wrap">
+              <h5 class="text-white">10</h5>
+              <p class="text-white">Business Parners</p>
             </div>
+          </div>
 
-            <div class="blue-card">
-              <div class="">
-                <h5>100</h5>
-                <p>Projects Complited</p>
-              </div>
+          <div class="blue-card">
+            <div class="text-wrap">
+              <h5 class="text-white">100</h5>
+              <p class="text-white">Projects Complited</p>
             </div>
+          </div>
+        </div>
+
+            
         
       </section>
 
       <section class="container">
-        <h2>How it works</h2>
+        <h2 class="text-gray">How it works</h2>
         <div class="working-steps">
           <div class="working-steps__line">
             <div class="dot dot-1"></div>
@@ -224,27 +228,27 @@
 
         <div class="flex-wrap">
           <div class="step step-1">
-            <div class="circule circule-1">1</div>
-            <h4>Step 1</h4>
-            <p>
+            <div class="circule circule-1 text-blue">1</div>
+            <h4 class="text-blue">Step 1</h4>
+            <p class="text-gray">
               Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
               eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut
               enim ad minim veniam, quis .
             </p>
           </div>
           <div class="step step-2">
-            <div class="circule circule-2">2</div>
-            <h4>Step 2</h4>
-            <p>
+            <div class="circule circule-2 text-blue">2</div>
+            <h4 class="text-blue">Step 2</h4>
+            <p class="text-gray">
               Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
               eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut
               enim ad minim veniam, quis .
             </p>
           </div>
           <div class="step step-3">
-            <div class="circule circule-3">3</div>
-            <h4>Step 3</h4>
-            <p>
+            <div class="circule circule-3 text-blue">3</div>
+            <h4 class="text-blue">Step 3</h4>
+            <p class="text-gray">
               Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
               eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut
               enim ad minim veniam, quis .
@@ -255,6 +259,7 @@
           <a href="#" class="button button-step">BUTTON</a>
         </div>
       </section>
+
       <section class="action action-height">
         <div class="container">
           <div class="flex-wrap">
@@ -262,8 +267,8 @@
               <img src="/images/cell-phone.png" alt="" />
             </div>
             <div class="wrap__text wrap__text-action">
-              <h3>Call to action frace</h3>
-              <p>Lorem ipsum dolor sit amet, consectetur adipiscing</p>
+              <h3 class="text-gray">Call to action frace</h3>
+              <p class="text-gray">Lorem ipsum dolor sit amet, consectetur adipiscing</p>
               <a href="#" class="button button-step">BUTTON</a>
             </div>
           </div>
@@ -271,7 +276,7 @@
       </section>
 
       <section class="container">
-        <h2 class="align-right">Meet Our Team</h2>
+        <h2 class="align-right text-gray">Meet Our Team</h2>
         <div class="flex-wrap flex-wrap-team">
           <div class="team">
             <div class="team__blue-field team__blue-field-1">
@@ -283,13 +288,13 @@
             <div class="team__text-field">
               <h6>Lorem Ipsum</h6>
               <h5>Lorem Ipsum</h5>
-              <p>
+              <p class="text-gray">
                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Facilis
                 esse molestias sed voluptate nihil, quia dolorem atque quasi
                 ipsum, vel quae voluptas commodi harum fugit illo modi
                 molestiae? Eligendi, quo!
               </p>
-              <a href="#" class="link-more">Learn more></a>
+              <a href="#" class="link-more text-blue">Learn more></a>
             </div>
           </div>
           <div class="team">
@@ -302,13 +307,13 @@
             <div class="team__text-field">
               <h6>Lorem Ipsum</h6>
               <h5>Lorem Ipsum</h5>
-              <p>
+              <p class="text-gray">
                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Facilis
                 esse molestias sed voluptate nihil, quia dolorem atque quasi
                 ipsum, vel quae voluptas commodi harum fugit illo modi
                 molestiae? Eligendi, quo!
               </p>
-              <a href="#" class="link-more">Learn more></a>
+              <a href="#" class="link-more text-blue">Learn more></a>
             </div>
           </div>
           <div class="team">
@@ -321,13 +326,13 @@
             <div class="team__text-field">
               <h6>Lorem Ipsum</h6>
               <h5>Lorem Ipsum</h5>
-              <p>
+              <p class="text-gray">
                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Facilis
                 esse molestias sed voluptate nihil, quia dolorem atque quasi
                 ipsum, vel quae voluptas commodi harum fugit illo modi
                 molestiae? Eligendi, quo!
               </p>
-              <a href="#" class="link-more">Learn more></a>
+              <a href="#" class="link-more text-blue">Learn more></a>
             </div>
           </div>
         </div>
@@ -341,8 +346,8 @@
             itaque quas perferendis nesciunt odio a ducimus suscipit aliquid
             perspiciatis ipsum quod fuga ea?
           </p>
-          <h6 class="center">Lorem ipsum</h6>
-          <p class="center">Dolor sit amet</p>
+          <h6 class="center indent-zero">Lorem ipsum</h6>
+          <p class="center text-gray indent-zero">Dolor sit amet</p>
           <div class="img-absolute">
             <img src="/images/rectangle-83.png" alt="" />
           </div>
@@ -350,7 +355,7 @@
       </section>
       <section class="lights">
         <div class="container">
-          <h2>Our Clients</h2>
+          <h2 class="text-gray">Our Clients</h2>
           <div class="flex-wrap">
             <div class="logo">
               <img src="/images/kraftringen.png" alt="" />
@@ -368,7 +373,7 @@
         </div>
       </section>
       <section class="container">
-        <h2>Our Services</h2>
+        <h2 class="text-gray">Our Services</h2>
         <div class="flex-wrap">
           <div class="images-cell">
             <div class="images-cell_1">
@@ -379,46 +384,46 @@
             </div>
           </div>
           <div class="wrap__text">
-            <h5>Lorem ipsum</h5>
+            <h5 class="text-gray">Lorem ipsum</h5>
             <p style="width: 100%">
               Consectetuer adipiscing elit, sed diam nonummy nibh euismod
               tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi
               enim ad minim veniam, quis nostrud
             </p>
-            <a href="#" class="link-more">Learn more></a>
-            <h5>Lorem ipsum</h5>
+            <a href="#" class="link-more text-blue">Learn more></a>
+            <h5 class="text-gray">Lorem ipsum</h5>
             <p style="width: 100%">
               Consectetuer adipiscing elit, sed diam nonummy nibh euismod
               tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi
               enim ad minim veniam, quis nostrud
             </p>
-            <a href="#" class="link-more">Learn more></a>
-            <h5>Lorem ipsum</h5>
+            <a href="#" class="link-more text-blue">Learn more></a>
+            <h5 class="text-gray">Lorem ipsum</h5>
             <p style="width: 100%">
               Consectetuer adipiscing elit, sed diam nonummy nibh euismod
               tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi
               enim ad minim veniam, quis nostrud
             </p>
-            <a href="#" class="link-more">Learn more></a>
-            <h5>Lorem ipsum</h5>
+            <a href="#" class="link-more text-blue">Learn more></a>
+            <h5 class="text-gray">Lorem ipsum</h5>
             <p style="width: 100%">
               Consectetuer adipiscing elit, sed diam nonummy nibh euismod
               tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi
               enim ad minim veniam, quis nostrud
             </p>
-            <a href="#" class="link-more">Learn more></a>
+            <a href="#" class="link-more text-blue">Learn more></a>
           </div>
         </div>
       </section>
       <section class="container">
-        <h2>Choose your plan</h2>
+        <h2 class="text-gray">Choose your plan</h2>
         <div class="flex-wrap">
           <div class="card">
             <div class="blue-cube">
               <div class="blue-cube blue-cube__inkline"></div>
-              <p>Light</p>
+              <p class="text-gray">Light</p>
             </div>
-            <p>
+            <p class="text-gray">
               Lorem ipsum dolor sit, amet consectetur adipisicing elit. Tempore
               laborum in optio quia quasi incidunt perspiciatis voluptatem harum
               esse.
@@ -434,9 +439,9 @@
           <div class="card">
             <div class="blue-cube">
               <div class="blue-cube blue-cube__inkline"></div>
-              <p>Premium</p>
+              <p class="text-gray">Premium</p>
             </div>
-            <p>
+            <p class="text-gray">
               Lorem ipsum dolor sit, amet consectetur adipisicing elit. Tempore
               laborum in optio quia quasi incidunt perspiciatis voluptatem harum
               esse.
@@ -452,9 +457,9 @@
           <div class="card">
             <div class="blue-cube">
               <div class="blue-cube blue-cube__inkline"></div>
-              <p>Standart</p>
+              <p class="text-gray">Standart</p>
             </div>
-            <p>
+            <p class="text-gray">
               Lorem ipsum dolor sit, amet consectetur adipisicing elit. Tempore
               laborum in optio quia quasi incidunt perspiciatis voluptatem harum
               esse.
@@ -472,7 +477,7 @@
       <section class="container">
         <div class="action-frase">
           <p class="title">Call to action frase</p>
-          <p>
+          <p class="text-gray">
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Deserunt,
             voluptates quibusdam. Nam, fugiat?
           </p>
@@ -481,7 +486,7 @@
         </div>
       </section>
       <section class="container">
-        <h2>Read News</h2>
+        <h2 class="text-gray">Read News</h2>
         <div class="flex-wrap">
           <div class="image-card">
             <img src="/images/01.png" alt="" />
@@ -563,7 +568,7 @@
         </div>
       </section>
       <section class="container">
-        <h2>Contact Us</h2>
+        <h2 class="text-gray">Contact Us</h2>
         <div class="form-wrap">
           <form
             action="#"
@@ -572,7 +577,7 @@
             autocomplete="off"
             id="registration-form"
           >
-            <label for="name"
+            <label for="name" class="text-gray"
               >Consectetuer adipiscing elit, sed diam nonummy nibh euismod
               tincidunt ut laoreet dolore magna aliquam erat volutpat.</label
             >
@@ -601,16 +606,16 @@
             <img src="/images/logo.png" alt="" />
           </div>
           <div class="navigate">
-            <a href="#">Home</a>
-            <a href="#">Services</a>
-            <a href="#">How it works</a>
-            <a href="#">Contact</a>
+            <a href="#" class="text-black">Home</a>
+            <a href="#" class="text-black">Services</a>
+            <a href="#" class="text-black">How it works</a>
+            <a href="#" class="text-black">Contact</a>
           </div>
           <div class="navigate">
-            <a href="#">About</a>
-            <a href="#">News</a>
-            <a href="#">Team</a>
-            <a href="#">FAQ</a>
+            <a href="#" class="text-black">About</a>
+            <a href="#" class="text-black">News</a>
+            <a href="#" class="text-black">Team</a>
+            <a href="#" class="text-black">FAQ</a>
           </div>
           <div class="navigate">
             <div class="flex-wrap">
