--- a/index.html
+++ b/index.html
@@ -189,25 +189,49 @@
       <section class="container">
         <h2>Why Evado</h2>
 
-        <div class="flex-wrap">
-          <div class="blue-card">
+        <div class="flex-wrap-wrap">
+
+          <div class="blue-card mt-10">
             <div class="text-wrap">
-              <h5 class="text-white">100</h5>
-              <p class="text-white">Happy clients</p>
+              <h5 class="text-white m-0">100</h5>
+              <p class="text-white m-0">Happy clients</p>
+            </div>
+            <div class="dots">
+              <div class="dot-green"></div>
+              <div class="dot-blue"></div>
             </div>
           </div>
 
-          <div class="blue-card">
+          <div class="blue-card mt-95">
             <div class="text-wrap">
-              <h5 class="text-white">10</h5>
-              <p class="text-white">Business Parners</p>
+              <h5 class="text-white m-0">10</h5>
+              <p class="text-white m-0">Business Parners</p>
+            </div>
+            <div class="dots">
+              <div class="dot-green"></div>
+              <div class="dot-blue"></div>
             </div>
           </div>
 
-          <div class="blue-card">
+          <div class="blue-card mt-10">
             <div class="text-wrap">
-              <h5 class="text-white">100</h5>
-              <p class="text-white">Projects Complited</p>
+              <h5 class="text-white m-0">100</h5>
+              <p class="text-white m-0">Projects Complited</p>
+            </div>
+            <div class="dots">
+              <div class="dot-green"></div>
+              <div class="dot-blue"></div>
+            </div>
+          </div>
+
+          <div class="blue-card mt-95">
+            <div class="text-wrap">
+              <h5 class="text-white m-0">100</h5>
+              <p class="text-white m-0">Projects Complited</p>
+            </div>
+            <div class="dots">
+              <div class="dot-green"></div>
+              <div class="dot-blue"></div>
             </div>
           </div>
         </div>
@@ -218,60 +242,64 @@
 
       <section class="container">
         <h2 class="text-gray">How it works</h2>
-        <div class="working-steps">
-          <div class="working-steps__line">
-            <div class="dot dot-1"></div>
-            <div class="dot dot-2"></div>
-            <div class="dot dot-3"></div>
-          </div>
-        </div>
 
-        <div class="flex-wrap">
+        <div class="flex-wrap-wrap">
           <div class="step step-1">
-            <div class="circule circule-1 text-blue">1</div>
+            <div class="img-icon">
+              <img src="/images/icons/sign-up-1.png" alt="">
+            </div>
             <h4 class="text-blue">Step 1</h4>
-            <p class="text-gray">
+            <p class="text-black fs-18">
               Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-              eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut
-              enim ad minim veniam, quis .
+              eiusmod tempor incididunt.
             </p>
           </div>
           <div class="step step-2">
-            <div class="circule circule-2 text-blue">2</div>
+            <div class="img-icon">
+              <img src="/images/icons/compare.png" alt="">
+            </div>
             <h4 class="text-blue">Step 2</h4>
-            <p class="text-gray">
+            <p class="text-black fs-18">
               Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-              eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut
-              enim ad minim veniam, quis .
+              eiusmod tempor incididunt.
             </p>
           </div>
           <div class="step step-3">
-            <div class="circule circule-3 text-blue">3</div>
+            <div class="img-icon">
+              <img src="/images/icons/sign-up-2.png" alt="">
+            </div>
             <h4 class="text-blue">Step 3</h4>
-            <p class="text-gray">
+            <p class="text-black fs-18">
               Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-              eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut
-              enim ad minim veniam, quis .
+              eiusmod tempor incididunt.
+            </p>
+          </div>
+          <div class="step step-4">
+            <div class="img-icon">
+              <img src="/images/icons/compare-2.png" alt="">
+            </div>
+            <h4 class="text-blue">Step 4</h4>
+            <p class="text-black fs-18">
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+              eiusmod tempor incididunt.
             </p>
           </div>
         </div>
-        <div class="step step-button">
-          <a href="#" class="button button-step">BUTTON</a>
+        <div class="action-frase">
+          <a href="#" class="button">BUTTON</a>
         </div>
       </section>
 
-      <section class="action action-height">
+      <section class="action">
         <div class="container">
-          <div class="flex-wrap">
-            <div class="cell-phone">
-              <img src="/images/cell-phone.png" alt="" />
-            </div>
-            <div class="wrap__text wrap__text-action">
-              <h3 class="text-gray">Call to action frace</h3>
+            <div class="text-wrap-action">
               <p class="text-gray">Lorem ipsum dolor sit amet, consectetur adipiscing</p>
-              <a href="#" class="button button-step">BUTTON</a>
+              <h3 class="text-gray fs-48">Let’s work together</h3>
             </div>
-          </div>
+        </div>
+
+        <div class="action-frase">
+          <a href="#" class="button">BUTTON</a>
         </div>
       </section>
 
