--- a/index.html
+++ b/index.html
@@ -292,7 +292,7 @@
 
       <section class="action">
         <div class="container">
-            <div class="text-wrap-action">
+            <div class="tac">
               <p class="text-gray">Lorem ipsum dolor sit amet, consectetur adipiscing</p>
               <h3 class="text-gray fs-48">Let’s work together</h3>
             </div>
@@ -304,15 +304,17 @@
       </section>
 
       <section class="container">
-        <h2 class="align-right text-gray">Meet Our Team</h2>
-        <div class="flex-wrap flex-wrap-team">
-          <div class="team">
-            <div class="team__blue-field team__blue-field-1">
-              <img src="/images/jonas.png" alt="" />
+        <h2 class="tac text-gray">Meet Our Team</h2>
+        <div class="flex-wrap-team">
+
+          <div class="team mb-100">
+            <div class="team__img-field team__img-field-1">
+              <img src="/images/our-team/123.jpg" alt="" />
               <div class="team__icon">
                 <img src="/images/icons/group-100.png" alt="" />
               </div>
             </div>
+
             <div class="team__text-field">
               <h6>Lorem Ipsum</h6>
               <h5>Lorem Ipsum</h5>
@@ -325,13 +327,15 @@
               <a href="#" class="link-more text-blue">Learn more></a>
             </div>
           </div>
-          <div class="team">
-            <div class="team__blue-field team__blue-field-2">
-              <img src="/images/oz-seyrek.png" alt="" />
+
+          <div class="team mb-100">
+            <div class="team__img-field team__img-field-2">
+              <img src="/images/our-team/456.jpg" alt="" />
               <div class="team__icon">
                 <img src="/images/icons/group-101.png" alt="" />
               </div>
             </div>
+
             <div class="team__text-field">
               <h6>Lorem Ipsum</h6>
               <h5>Lorem Ipsum</h5>
@@ -344,13 +348,15 @@
               <a href="#" class="link-more text-blue">Learn more></a>
             </div>
           </div>
-          <div class="team">
-            <div class="team__blue-field team__blue-field-3">
-              <img src="/images/foto-sushi.png" alt="" />
+
+          <div class="team mb-100">
+            <div class="team__img-field team__img-field-3">
+              <img src="/images/our-team/789.jpg" alt="" />
               <div class="team__icon">
                 <img src="/images/icons/group-102.png" alt="" />
               </div>
             </div>
+
             <div class="team__text-field">
               <h6>Lorem Ipsum</h6>
               <h5>Lorem Ipsum</h5>
@@ -365,8 +371,9 @@
           </div>
         </div>
       </section>
+
       <section class="action">
-        <div class="container container-indent">
+        <div class="container">
           <p class="quotes">“</p>
           <p class="center">
             Lorem ipsum dolor sit amet consectetur, adipisicing elit. Hic
@@ -381,23 +388,29 @@
           </div>
         </div>
       </section>
-      <section class="lights">
-        <div class="container">
-          <h2 class="text-gray">Our Clients</h2>
-          <div class="flex-wrap">
+
+      <section class="container">
+        <div class="lights">
+          <h2 class="text-gray tac">Our Clients</h2>
+
+          <div class="flex-wrap-constant">
             <div class="logo">
               <img src="/images/kraftringen.png" alt="" />
             </div>
             <div class="logo">
-              <img src="/images/luleaenergi.png" alt="" />
-            </div>
-            <div class="logo">
               <img src="/images/lulebo_logo.png" alt="" />
+            </div>
+          </div>
+
+          <div class="flex-wrap-constant">
+            <div class="logo">
+              <img src="/images/luleaenergi.png" alt="" />
             </div>
             <div class="logo">
               <img src="/images/logo_pb.png" alt="" />
             </div>
           </div>
+          
         </div>
       </section>
       <section class="container">
